Modified to use NDX only. Will re-engineer for HDX when available with NDX support.

--- a/jaiutil/src/main/uk/ac/starlink/jaiutil/README
+++ b/jaiutil/src/main/uk/ac/starlink/jaiutil/README
@@ -4,4 +4,8 @@ The following files will need modifying for some new HDX system:
 
    NDArrayData
    HDXImage
+
+and for new Exceptions:
+
+   HDXDecoder
    
