--- a/src/docs/webstart/README
+++ b/src/docs/webstart/README
@@ -231,5 +231,8 @@
  cannot be signed before ANT is installed, this must be done
  afterwards using the "ant sign_ant" target of the main jar file.
  
+ JAI. Currently it is assumed that webstart uses a JRE with this
+ installed as an extension. We should probably offer it as a package.
+
 
  Peter W. Draper 14th November 2003
