Fixes so that the tests work with AST V2 or V3.

--- a/treeview/src/testcases/uk/ac/starlink/treeview/demopath.cmp.3
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demopath.cmp.3
@@ -4,7 +4,7 @@
 [DemoData]:fits/cube.fits#0
 [DemoData]:fits/cube.fits#0.WCS
 [DemoData]:fits/cube.fits#0.WCS.GRID
-[DemoData]:fits/cube.fits#0.WCS.VELO-STOKES-SKY
+[DemoData]:fits/cube.fits#0.WCS.STOKES-SKY-SPECTRUM
 [DemoData]:fits/tables.fit
 [DemoData]:fits/tables.fit#0
 [DemoData]:fits/tables.fit#1
