--- a/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp.3
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp.3
@@ -2,9 +2,9 @@
     + [DIR] fits
       + [FIT] cube.fits  (120,120,8,1)
         + [IMG] Primary HDU  (Image (120,120,8,1) )
-          + [WCS] WCS  2 frames; current domain "VELO-STOKES-SKY"
+          + [WCS] WCS  2 frames; current domain "STOKES-SKY-SPECTRUM"
             - [FRM] GRID  (4 axes) "Pixel Coordinates"
-            - [FRM] VELO-STOKES-SKY  (4 axes) "4-d compound coordinate system"
+            - [FRM] STOKES-SKY-SPECTRUM  (4 axes) "4-d compound coordinate system"
       + [FIT] tables.fit
         - [HDU] Primary HDU  (Header)
         - [TBL] HDU 1  ASCII table (13x138)
