Fixed testcases for improved NDF AXIS component handling.

--- a/treeview/src/testcases/uk/ac/starlink/treeview/demopath.cmp.3
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demopath.cmp.3
@@ -111,6 +111,7 @@
 [DemoData]:ndx/rdata2.sdf.WCS
 [DemoData]:ndx/rdata2.sdf.WCS.GRID
 [DemoData]:ndx/rdata2.sdf.WCS.PIXEL
+[DemoData]:ndx/rdata2.sdf.WCS.AXIS
 [DemoData]:ndx/rdata2.sdf.WCS.CCD_GEN
 [DemoData]:ndx/rdata2.sdf.WCS.CCD_REG
 [DemoData]:ndx/rdata2.sdf.etc
