--- a/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp.3
+++ b/treeview/src/testcases/uk/ac/starlink/treeview/demotxt.cmp.3
@@ -108,9 +108,10 @@
         - [SCA] Title  <string>"Output from FLATCOR"
         - [NDA] image  (6+114,1+128)  <float>
         - [NDA] variance  (6+114,1+128)  <float>
-        + [WCS] WCS  4 frames; current domain "CCD_REG"
+        + [WCS] WCS  5 frames; current domain "CCD_REG"
           - [FRM] GRID  (2 axes) "2-d coordinate system"
           - [FRM] PIXEL  (2 axes) "2-d coordinate system"
+          - [FRM] AXIS  (2 axes) "2-d coordinate system"
           - [FRM] CCD_GEN  (2 axes) "Alignment of CCDGENERATE test data"
           - [FRM] CCD_REG  (2 axes) "Alignment by REGISTER"
         + [ELE] <etc>
