--- a/splat/src/docs/sun243.htx/images.tex
+++ b/splat/src/docs/sun243.htx/images.tex
@@ -1,8 +1,8 @@
 \batchmode
 \documentclass[twoside,11pt]{article}
 \makeatletter
-\input{/loc/pwdc/pdraper/java/cvs/java/source/splat/src/docs/sun243_htx/html.sty}
-\input{/loc/pwdc/pdraper/java/cvs/java/source/splat/src/docs/sun243_htx/star2html.sty} 
+\input{/loc/pwdc/pdraper/java/release_branch/java/source/splat/src/docs/sun243_htx/html.sty}
+\input{/loc/pwdc/pdraper/java/release_branch/java/source/splat/src/docs/sun243_htx/star2html.sty} 
 
 \usepackage{graphicx}
 
@@ -14,14 +14,14 @@
 \pagestyle{myheadings}
 \raggedbottom
 
-\providecommand{\stardoccategory}  {Starlink User Note}\providecommand{\stardocinitials}  {SUN}\providecommand{\stardocsource}    {sun243.2}\providecommand{\stardoccopyright}
-{Copyright \copyright\ 2001-2003 Council for the Central Laboratory of the
+\providecommand{\stardoccategory}  {Starlink User Note}\providecommand{\stardocinitials}  {SUN}\providecommand{\stardocsource}    {sun243.3}\providecommand{\stardoccopyright}
+{Copyright \copyright\ 2001-2004 Council for the Central Laboratory of the
 Research Councils}
-\providecommand{\stardocnumber}    {243.2}\providecommand{\stardocauthors}   {Peter W. Draper}\providecommand{\stardocdate}      {03 June 2003}\providecommand{\stardoctitle}     {SPLAT - A Spectral Analysis Tool}\providecommand{\stardocversion}   {2.0}\providecommand{\stardocmanual}    {User's Manual}\providecommand{\stardocabstract}  {
+\providecommand{\stardocnumber}    {243.3}\providecommand{\stardocauthors}   {Peter W. Draper}\providecommand{\stardocdate}      {19 May 2004}\providecommand{\stardoctitle}     {SPLAT - A Spectral Analysis Tool}\providecommand{\stardocversion}   {2.1}\providecommand{\stardocmanual}    {User's Manual}\providecommand{\stardocabstract}  {
 \textsf{SPLAT} is an extensible analysis and display tool for extracted
 spectra.
 }
-\providecommand{\stardocname}{SUN/243.2}\markboth{SUN/243.2}{SUN/243.2}
+\providecommand{\stardocname}{SUN/243.3}\markboth{SUN/243.3}{SUN/243.3}
 \setlength{\textwidth}{160mm}\setlength{\textheight}{230mm}\setlength{\topmargin}{-2mm}\setlength{\oddsidemargin}{0mm}\setlength{\evensidemargin}{0mm}\setlength{\parindent}{0mm}\setlength{\parskip}{\medskipamount}\setlength{\unitlength}{1mm}
 \providecommand{\SPLAT}{\textsf{SPLAT}}
 \providecommand{\mainfigure}[1]
@@ -30,9 +30,9 @@ spectra.
  \end{center}
 }
 \providecommand{\clippedmainfigure}[1]
-{\begin{quote}
+{\begin{center}
  \htmladdimg{#1.gif}
- \end{quote}
+ \end{center}
 }
 \providecommand{\inline}[1]
         {\htmladdimg[align=center]{#1.gif}}
@@ -166,8 +166,9 @@ spectra.
 \stepcounter{subsection}
 \stepcounter{subsection}
 \stepcounter{subsection}
+\stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline1199}%
+\lthtmlinlinemathA{tex2html_wrap_inline1361}%
 $\div$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
@@ -178,7 +179,7 @@ $\div$%
 \stepcounter{subsection}
 \stepcounter{subsection}
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1597}%
+\lthtmldisplayA{displaymath1841}%
 \begin{displaymath}
  \displaystyle\sqrt{
     \displaystyle\frac{
@@ -188,14 +189,15 @@ $\div$%
 \lthtmlcheckvsize\clearpage}
 
 \stepcounter{subsection}
+\stepcounter{subsection}
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline1824}%
+\lthtmlinlinemathA{tex2html_wrap_inline2094}%
 $\pm 1$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1808}%
+\lthtmldisplayA{displaymath2078}%
 \begin{displaymath}
   y(r) = A * exp\left( -0.5 * \left(\frac{x-c}{\sigma}\right)^{2}\right)
  \end{displaymath}%
@@ -203,13 +205,13 @@ $\pm 1$%
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmlinlinemathA{tex2html_wrap_inline1836}%
+\lthtmlinlinemathA{tex2html_wrap_inline2106}%
 $\sigma$%
 \lthtmlinlinemathZ
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1809}%
+\lthtmldisplayA{displaymath2079}%
 \begin{displaymath}
   y(r) = \frac{A}{1+0.5*(\frac{x-c}{w})^{2}}
  \end{displaymath}%
@@ -217,7 +219,7 @@ $\sigma$%
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1810}%
+\lthtmldisplayA{displaymath2080}%
 \begin{displaymath}
  fwhm = w*2\sqrt{2}
  \end{displaymath}%
@@ -225,7 +227,7 @@ $\sigma$%
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1811}%
+\lthtmldisplayA{displaymath2081}%
 \begin{displaymath}
  K(a,b) = \frac{b}{\pi}\int_{-\infty}^{\infty}\frac{\mathrm{exp}(-t^{2})}{(a-t)^{2}+b^{2}}dt
  \end{displaymath}%
@@ -233,7 +235,7 @@ $\sigma$%
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1812}%
+\lthtmldisplayA{displaymath2082}%
 \begin{displaymath}
  a = \sqrt{\ln{2}} \, \left(\frac{x-c}{\sigma}\right)
  \end{displaymath}%
@@ -241,7 +243,7 @@ $\sigma$%
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1813}%
+\lthtmldisplayA{displaymath2083}%
 \begin{displaymath}
  b = \sqrt{\ln{2}} \, \left(\frac{w}{\sigma}\right)
  \end{displaymath}%
@@ -249,7 +251,7 @@ $\sigma$%
 \lthtmlcheckvsize\clearpage}
 
 {\newpage\clearpage
-\lthtmldisplayA{displaymath1814}%
+\lthtmldisplayA{displaymath2084}%
 \begin{displaymath}
  w(z) = \mathrm{exp}(-z^{2}) \, \mathrm{erfc}(-iz)
  \end{displaymath}%
