Fixed a couple of renamed hyperlinks.

--- a/splat/src/docs/sun243.tex
+++ b/splat/src/docs/sun243.tex
@@ -1325,7 +1325,7 @@ scroll.
 
  If you need to use an expression of your own you might like to view
  the full list of functions that are available in the MathMap section
- of the \xref{KAPPA SUN}{sun95}{ap:MathMaps}. A lot of C-like
+ of the \xref{KAPPA SUN}{sun95}{ap_MathMaps}. A lot of C-like
  intrinsics are available (abs, atan/sin/cos, tan/sin/cos, log, pow
  sqrt, \etc), which can operate on the data columns $data$, $coord$
  and $error$, as well as the virtual $index$ column.
@@ -1445,7 +1445,7 @@ specified in various units, for instance angstroms.
 To find out more about spectral coordinate systems you'll need to
 refer to `FITS-WCS paper III Representations of spectral coordinates
 in FITS (Greisen, Valdes, Calabretta \& Allen)' and the Starlink AST
-library documentation (\xref{SUN/211}{sun211}{ss:specframes}).
+library documentation (\xref{SUN/211}{sun211}{ss_specframes}).
 
 
 \newpage
