--- a/topcat/src/docs/changes
+++ b/topcat/src/docs/changes
@@ -44,7 +44,10 @@ V1.3.
  - Can now select units (radians/degrees) for angle match columns 
  - Changed the names of the properties used by JELUtils.
  - More improvements to pair matching efficiency.
+ - FITS-plus handler
  - Activation string serialized to output table (VOTable PARAM).
  - VOTable processing improvements (full VOTable 1.1 compatibility, J2SE1.5).
  - Added comma-separated value input and output handlers.
  - Can now optionally specify input format (command line or load window).
+ - Improved rendering of numbers in data window (esp. Floats)
+ - Improved column width detection in data window.
